RESOLVED FIXED37721
[Chromium] pressing TAB does not close the popup menu
https://bugs.webkit.org/show_bug.cgi?id=37721
Summary [Chromium] pressing TAB does not close the popup menu
Jay Civelli
Reported 2010-04-16 12:03:37 PDT
- Visit a page with a select (ex: http://www.google.com/preferences?hl=en) - Click on the select to open the popup, select an item with the down key - Press TAB Expected: The popup is closed, the item selected, the focus move to the next focusable element in the page. Actual: Nothing happens, the popup stays open.
Attachments
Pressing TAB closes the select popup. (2.85 KB, patch)
2010-04-16 12:10 PDT, Jay Civelli
no flags
Fix for style (2.85 KB, patch)
2010-04-16 13:07 PDT, Jay Civelli
no flags
Really fixing style. (2.85 KB, patch)
2010-04-16 13:25 PDT, Jay Civelli
no flags
Jay Civelli
Comment 1 2010-04-16 12:10:18 PDT
Created attachment 53548 [details] Pressing TAB closes the select popup.
WebKit Review Bot
Comment 2 2010-04-16 12:14:13 PDT
Attachment 53548 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/chromium/ChangeLog:5: One or more unexpected \r (^M) found; better to use only a \n [whitespace/carriage_return] [1] Suppressing further [whitespace/carriage_return] reports for this file. Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jay Civelli
Comment 3 2010-04-16 13:07:11 PDT
Created attachment 53553 [details] Fix for style
WebKit Review Bot
Comment 4 2010-04-16 13:11:30 PDT
Attachment 53553 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/chromium/ChangeLog:5: One or more unexpected \r (^M) found; better to use only a \n [whitespace/carriage_return] [1] Suppressing further [whitespace/carriage_return] reports for this file. Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jay Civelli
Comment 5 2010-04-16 13:25:54 PDT
Created attachment 53556 [details] Really fixing style.
Dimitri Glazkov (Google)
Comment 6 2010-04-19 11:39:19 PDT
Comment on attachment 53556 [details] Really fixing style. ok.
Jay Civelli
Comment 7 2010-04-19 16:51:28 PDT
*** Bug 37438 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 8 2010-04-20 07:59:06 PDT
Comment on attachment 53556 [details] Really fixing style. Clearing flags on attachment: 53556 Committed r57891: <http://trac.webkit.org/changeset/57891>
WebKit Commit Bot
Comment 9 2010-04-20 07:59:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.