2010-04-20  Jay Civelli  <jcivelli@chromium.org>

Reviewed by Dimitri Glazkov.

        [chromium] Pressing tab now closes the select popup as it should.
        https://bugs.webkit.org/show_bug.cgi?id=37721

        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupListBox::handleKeyEvent):
2010-04-20  Jay Civelli  <jcivelli@chromium.org>

        Reviewed by Dimitri Glazkov.

        [chromium] Tests that pressing tab now closes the select popup.
        https://bugs.webkit.org/show_bug.cgi?id=37721

        * tests/PopupMenuTest.cpp:
        (WebKit::TEST_F):

Canonical link: https://commits.webkit.org/49172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57891 268f45cc-cd09-0410-ab3c-d52691b4dbfc